--- a/autogpts/osGPT/forge/prompts/os-gpt/plan-user-message.j2
+++ b/autogpts/osGPT/forge/prompts/os-gpt/plan-user-message.j2
@@ -1,4 +1,4 @@
 # Task
 {{input}}
 
-Begin! Reminder to always use the exact format when responding and to exclusively utilize the abilities provided in the 'Functions' section.
+Begin! Use only the given format and listed functions. Be concise and on-point.
