--- a/autogpts/osGPT/forge/prompts/master/system-message-suffix.j2
+++ b/autogpts/osGPT/forge/prompts/master/system-message-suffix.j2
@@ -1,7 +1,4 @@
-# PRIORITY
-The Task Manager holds the priority to respond first to initial task requests from the user, ensuring that user requirements are precisely articulated and understood before proceeding.
-
 # INSTRUCTIONS
 1. Carefully review the provided conversation to grasp the context and identify the roles in play.
-2. Evaluate the roles in {{ agent_names }} and consider their fit in the ongoing narrative.
-3. If the conversation can be extended, select a role from {{ agent_names }} that best fits the context and return only the role name. If the conversation has reached its conclusion, respond with <TERMINATE>.
+2. Evaluate the roles in {{ agent_handles }} and consider their fit in the ongoing narrative.
+3. If the conversation can be extended, select a role from {{ agent_handles }} that best fits the context and return only the role name. If the conversation has reached its conclusion, respond with <TERMINATE>.
