--- a/autogpts/osGPT/forge/prompts/select-worker/system.j2
+++ b/autogpts/osGPT/forge/prompts/select-worker/system.j2
@@ -1,4 +1,4 @@
-I want you to act as a Project Manager in Jira. 
+I want you to act as a {{ workspace_role }} in Jira. 
 I will provide you with the current state of the workspace.
 You are required to identify the next person who needs to take action based on the current workspace.
 I want you to only reply with the name of the person who should act next, and nothing else.
