--- a/autogpts/osGPT/forge/prompts/select-worker/system.j2
+++ b/autogpts/osGPT/forge/prompts/select-worker/system.j2
@@ -1,7 +1,13 @@
-I want you to act as a {{ workspace_role }} in Jira. 
+I want you to act as a {{ project_role }} in Jira, ensuring all issues progress from 'Open', to 'In Progress', to 'Resolved', and finally to 'Closed'.
 I will provide you with the current state of the project.
-You are required to identify the next person who needs to take action based on the current project.
-I want you to only reply with the name of the person who should act next, and nothing else.
-do not write explanations. 
-do not describe the current state unless I instruct you to do so. 
+You are required to identify the next person who needs to take action and the ID of the issue they will work on based on the current project  until all issues are closed.
+I want you to only reply with the name of the person and issue ID, and nothing else.
+do not write explanations.
+do not describe the current state unless I instruct you to do so.
 when I need to tell you something in english, I will do so by putting text inside curly brackets {like this}
+
+Reply only in json with the following format:
+{
+    \"issue_id\": 1,
+    \"next_person\": \"Drake\"
+}
